Cleaning up a bit

--- a/gmm/gmm/gmm.vcxproj
+++ b/gmm/gmm/gmm.vcxproj
@@ -121,6 +121,10 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="arma_gmm.h" />
+    <ClInclude Include="opencv_gmm.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
